--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,7 +9,7 @@
   <nav class="flex flex-col justify-between h-full">
     <ul class="flex flex-col items-center">
       <% nav_items.each do |item| %>
-        <% is_current = request.path.start_with?(item[:path]) %>
+        <% is_current = item[:path] == root_path ? request.path == item[:path] : request.path.start_with?(item[:path]) %>
         <% icon_class = is_current ? "text-black" : "text-gray-400 group-hover:text-black transition-colors" %>
         <li class = "flex justify-center w-full <%= is_current ? "bg-white block w-full rounded-3xl" : "" %>">
           <%= link_to item[:path], class: "group block p-4 tooltip tooltip-right", data: { tip: item[:tip] } do %>
@@ -24,7 +24,7 @@
       </div>
       <ul tabindex="0" class="menu menu-vertical dropdown-content bg-base-100 rounded-box p-2 shadow-md rounded-2xl">
         <li><%= link_to "アカウント", "#", class: "whitespace-nowrap" %></li>
-        <li><%= link_to "設定", "#", class: "whitespace-nowrap" %></li>
+        <li><%= link_to "設定", settings_path, class: "whitespace-nowrap" %></li>
         <li><%= button_to "ログアウト", session_path, method: :delete, class: "cursor-pointer", data: { confirm: "本当にログアウトしますか？" } %></li>
       </ul>
     </div>
