--- a/app/views/user_activations/new.html.erb
+++ b/app/views/user_activations/new.html.erb
@@ -9,8 +9,7 @@
     <% end %>
     <%= image_tag "logo.png", class: "w-[100] mx-auto mb-10" %>
     
-    <h2 class="text-2xl font-bold text-center mb-6 text-white">アカウント作成</h2>
-    <p class="text-center text-white mb-6">招待されたメールアドレス: <strong><%= @user_invitation.email_address %></strong></p>
+    <h2 class="text-2xl font-bold text-center mb-6">アカウント作成 🎉</h2>
     
     <%= form_with model: @user, url: activate_user_invitation_path(@token), local: true do |form| %>
       <fieldset class="fieldset bg-base-200 border-base-300 rounded-box border p-6 w-full">
