feat: Refactor orders structure by removing order items and adding additional columns to orders

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html data-theme="light">
   <%= render "layouts/head" %>
   <body class="flex">
     <%= render "layouts/header" if authenticated? %>
